added the user controller endpoints